1,增加对特殊目录,图片缓存的处理.

--- a/Source/Program/Config/Quick.OwinMVC.properties
+++ b/Source/Program/Config/Quick.OwinMVC.properties
@@ -17,7 +17,10 @@ Quick.OwinMVC.Middleware.HttpMiddleware;Quick.OwinMVC,\
 Quick.OwinMVC.Node.NodeApiMiddleware;Quick.OwinMVC,\
 Quick.OwinMVC.Middleware.ApiMiddleware;Quick.OwinMVC,\
 Quick.OwinMVC.Middleware.StaticViewMiddleware;Quick.OwinMVC,\
-Quick.OwinMVC.Middleware.Error404Middleware;Quick.OwinMVC
+Quick.OwinMVC.Middleware.Error404Middleware;Quick.OwinMVC ,\
+Quick.OwinMVC.Middleware.ImgViewMiddleware;Quick.OwinMVC 
+
+
 
 #视图中间件的视图渲染器类
 Quick.OwinMVC.Middleware.ViewMiddleware.ViewRender = \
@@ -43,7 +46,7 @@ Quick.OwinMVC.Middleware.Error404Middleware.RewritePath = /SvnManage/view/404
 #Session的ID键
 Quick.OwinMVC.Middleware.SessionMiddleware.IdKey = dcim.sid
 #Session过期时间，单位：秒
-Quick.OwinMVC.Middleware.SessionMiddleware.Expires = 600
+Quick.OwinMVC.Middleware.SessionMiddleware.Expires = 3600
 #检查过期Session间隔，单位：秒
 Quick.OwinMVC.Middleware.SessionMiddleware.CheckExpirePeriods = 60
 
@@ -67,6 +70,9 @@ Quick.OwinMVC.Middleware.StaticViewMiddleware.Expires = 86400
 Quick.OwinMVC.Middleware.ResourceMiddleware.Route = resource
 Quick.OwinMVC.Middleware.StaticViewMiddleware.Route = view
 Quick.OwinMVC.Middleware.ApiMiddleware.Route = api
+
+#处理图片的缓存.
+Quick.OwinMVC.Middleware.ResourceMiddleware.ImageType=.png#.jpg#.jpge#.bmp#.ico#.gif
 
 #额外的HTTP头
 Quick.OwinMVC.Middleware.StaticViewMiddleware.AddonHttpHeaders = Access-Control-Allow-Origin:*
