1,#处理图片的缓存.特殊路径,特殊后缀文件 都可加入多个. 2,不处理的特殊资源按,后有逻辑处理.

--- a/Source/Program/Config/Quick.OwinMVC.properties
+++ b/Source/Program/Config/Quick.OwinMVC.properties
@@ -71,8 +71,9 @@ Quick.OwinMVC.Middleware.ResourceMiddleware.Route = resource
 Quick.OwinMVC.Middleware.StaticViewMiddleware.Route = view
 Quick.OwinMVC.Middleware.ApiMiddleware.Route = api
 
-#处理图片的缓存.
-Quick.OwinMVC.Middleware.ResourceMiddleware.ImageType=.png#.jpg#.jpge#.bmp#.ico#.gif
+#处理图片的缓存.特殊路径,特殊后缀文件 都可加入多个.
+Quick.OwinMVC.Middleware.ResourceMiddleware.SpecialPath=Plugin.CCEX/cc
+Quick.OwinMVC.Middleware.ResourceMiddleware.ImageType=.png#.jpg#.jpge#.bmp#.ico#.gif#.htm
 
 #额外的HTTP头
 Quick.OwinMVC.Middleware.StaticViewMiddleware.AddonHttpHeaders = Access-Control-Allow-Origin:*
